<resources>
    <string name="app_name">LMS</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="categories">Categories</string>
    <string name="add_new_category">Add new category</string>
    <string name="courses">Courses</string>
    <string name="add_new_course">Add new Course</string>
    <string name="instructors">Instructors</string>
    <string name="instructor_list">Instructor List</string>
    <string name="instructor_payout">Instructor Payout</string>
    <string name="instructor_setting">Instructor setting</string>
    <string name="instructor_application">Instructor application</string>
    <string name="student">Student</string>
    <string name="enroll_history">Enroll history</string>
    <string name="enrolment">Enrolment</string>
    <string name="enrol_a_student">Enrol a student</string>
    <string name="reprot">Reprot</string>
    <string name="admin_revenue">Admin revenue</string>
    <string name="instructor_revenue">Instructor Revenue</string>
    <string name="message">Message</string>
    <string name="addons">Addons</string>
    <string name="addon_manager">Addon Manager</string>
    <string name="available_addons">Available addons</string>
    <string name="settings">Settings</string>
    <string name="system_setting">System Settings</string>
    <string name="payment_settings">Payment settings</string>
    <string name="website_settings">Website settings</string>
    <string name="language_settings">Language settings</string>
    <string name="smtp_settings">Smtp settings</string>
    <string name="theme_settings">Theme settings</string>
    <string name="about">About</string>
    <string name="manage_profile">Manage profile</string>
    <string name="instructor_settings">Instructor settings</string>
    <string name="instructor_application_note">Instructor application note</string>
    <string name="allow_public_instructor">Allow public instructor</string>
    <string name="public_instructor_settings">PUBLIC INSTRUCTOR SETTINGS</string>
    <string name="write_a_note">Write a note</string>
    <string name="update_settings">Update Settings</string>
    <string name="instructor_commission_settings">INSTRUCTOR COMMISSION SETTINGS</string>
    <string name="instructor_revenue_percentage">Instructor revenue percentage</string>
    <string name="admin_revenue_percentage">Admin revenue percentage</string>
    <string name="enter_number">Enter Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_detail">Enter New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="instructor">Instructor</string>
    <string name="basic">Basic</string>
    <string name="requirements">Requirements</string>
    <string name="course_title">Course Title</string>
    <string name="short_description">Short Description</string>
    <string name="description">Description</string>
    <string name="level">Level</string>
    <string name="language">Language</string>
    <string name="check_if_this_course_is_top_course">Check if this course is top course</string>
    <string name="outcomes">Outcomes</string>
    <string name="check_if_this_is_a_free_course">Check if this is a free course</string>
    <string name="course_price">Course Price</string>
    <string name="dicount_price">Dicount Price</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ProfileTitle">title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_credentials">Login Credentials</string>
    <string name="social_information">Social Information</string>
    <string name="payment_info">Payment Info</string>
    <string name="add_student">Add Student</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="biography">Biography</string>
    <string name="select_picture">Select Picture</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="facebook_link">Facebook Link</string>
    <string name="twitter_link">Twitter Link</string>
    <string name="linkedin_link">Linkedin Link</string>
    <string name="paypalclientid">PayPalClientId</string>
    <string name="stripe_public_key">Stripe Public Key</string>
    <string name="stripe_secret_key">Stripe Secret Key</string>
    <string name="paypal_client_id">PayPal Client id</string>
<<<<<<<<< Temporary merge branch 1
    <string name="from">From</string>
    <string name="image">Image</string>
    <string name="to">To</string>
    <string name="filter">Filter</string>
    <string name="deleting">Deleting...</string>
    <string name="add_section">Add Section</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="curriculum">Curriculum</string>
=========

    <!--student email verification spinner items-->
    <string-array name="email_verification">
        <item>Disable</item>
        <item>Enable</item>
    </string-array>

    <!--system settings languages-->
    <string-array name="language">
        <item>English</item>
        <item>Urdu</item>
        <item>Bengali</item>
    </string-array>

    <!--currency setting spinner items-->
    <string-array name="currency_position">
        <item>Left</item>
        <item>Right</item>
        <item>Left with space</item>
        <item>Right with space</item>
    </string-array>

    <string-array name="active_paypal">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="mode">
        <item>Sandbox</item>
        <item>Production</item>
    </string-array>

    <string-array name="testMode">
        <item>On</item>
        <item>Off</item>
    </string-array>



    <string name="from">From</string>
    <string name="image">Image</string>
    <string name="to">To</string>
    <string name="filter">Filter</string>
    <string name="deleting">Deleting...</string>
    <string name="add_section">Add Section</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="curriculum">Curriculum</string>
    <string name="video_url_for_web_app">Video Url For Web App</string>
</resources>