<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home"
        android:title="@string/home"
        />
    <item android:id="@+id/nav_dashboard"
        android:title="@string/dashboard"
        />

    <item
        android:id="@+id/nav_categories"
        android:title="@string/categories"
        >
        <menu>
            <item android:id="@+id/nav_viewCategories"
                android:title="@string/categories"
                />
            <item android:id="@+id/nav_addCategory"
                android:title="@string/add_new_category"
                />
        </menu>
    </item>

    <item android:id="@+id/nav_courses"
        android:title="@string/courses"
        >
        <menu>
            <item android:id="@+id/nav_viewCourses"
                android:title="@string/courses"
                />
            <item android:id="@+id/nav_addCourses"
                android:title="@string/add_new_course"
                />
        </menu>
    </item>
    <item android:id="@+id/nav_instructors"
        android:title="@string/instructors"
        >
        <menu>

            <item android:id="@+id/addInstructor"
                android:title="Add Instructor"/>

            <item
                android:id="@+id/nav_instructorList"
                android:title="@string/instructor_list"
                />
            <item
                android:id="@+id/nav_instructorPayout"
                android:title="@string/instructor_payout"
                />
            <item
                android:id="@+id/nav_instructorSettings"
                android:title="@string/instructor_setting"
                />
            <item
                android:id="@+id/nav_InstructorApplication"
                android:title="@string/instructor_application"
                />
        </menu>
    </item>

    <item android:id="@+id/student"
        android:title="@string/student"
        >
        <menu>
            <item android:id="@+id/nav_student"
                android:title="@string/student"
                />

            <item android:id="@+id/addStudent"
                android:title="@string/add_student"/>
        </menu>
    </item>

    <item android:id="@+id/Enrolment"
        android:title="@string/enrolment">
        <menu>
            <item android:id="@+id/nav_enrolHistory"
                android:title="@string/enroll_history"/>
        </menu>

    </item>

    <item android:id="@+id/Report"
        android:title="@string/reprot"
        >
        <menu>
            <item android:id="@+id/nav_adminRevenue"
                android:title="@string/admin_revenue"/>
            <item android:id="@+id/nav_instructorRevenue"
                android:title="@string/instructor_revenue"
                />
        </menu>
    </item>


    <item android:id="@+id/message"
        android:title="@string/message"
        >
        <menu>
            <item android:id="@+id/nav_message"
                android:title="@string/message"
                />

        </menu>
    </item>


    <item android:id="@+id/settings"
        android:title="@string/settings"
        >
        <menu>
            <item android:id="@+id/nav_systemSetting"
                android:title="@string/system_setting"
                />
            <item android:id="@+id/nav_websiteSettings"
                android:title="@string/website_settings"
                />
            <item android:id="@+id/nav_paymentSettings"
                android:title="@string/payment_settings"
                />
            <item android:id="@+id/nav_languageSettings"
                android:title="@string/language_settings"
                />
            <item android:id="@+id/nav_smtpSettings"
                android:title="@string/smtp_settings"/>
            <item android:id="@+id/nav_themeSettings"
                android:title="@string/theme_settings"
                />
            <item android:id="@+id/nav_about"
                android:title="Reset Password"/>

        </menu>
    </item>
    <item android:id="@+id/nav_log"
        android:title="Logout">
        <menu>
            <item android:id="@+id/nav_logout"
                android:title="Logout"/>
        </menu>
    </item>

</menu>