<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_16sdp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/first_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/ct"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/last_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/sd"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/biography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/biography" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/selectPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_picture"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/des"
        />

</androidx.constraintlayout.widget.ConstraintLayout>