<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_16sdp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/course_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/ct"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/short_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/sd"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/course_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/description" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/categoryContainer"
        app:layout_constraintTop_toBottomOf="@+id/des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:weightSum="2"
        android:gravity="center"
        >
        <TextView
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/categories"
            android:paddingStart="5dp"
            />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/course_category"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="40dp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/levelContainer"
        app:layout_constraintTop_toBottomOf="@+id/categoryContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:weightSum="2"
        android:gravity="center"
        >
        <TextView
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/level"
            android:paddingStart="5dp"
            />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/course_level"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="40dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/language_container"
        app:layout_constraintTop_toBottomOf="@+id/levelContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:weightSum="2"
        android:gravity="center"
        >
        <TextView
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/language"
            android:paddingStart="5dp"

            />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/language"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="40dp"
            />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/check_if_this_course_is_top_course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_container" />
</androidx.constraintlayout.widget.ConstraintLayout>