<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="4dp"
    />

    <androidx.cardview.widget.CardView
        android:id="@+id/pb_inst_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleCard"
        android:layout_marginTop="10dp"
        app:contentPadding="10dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_instructor_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allow_public_instructor"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                />
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/allow_pb"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:entries="@array/active_paypal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructor_application_note"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/write_a_note"
                app:boxCornerRadiusBottomEnd="80dp"
                app:boxCornerRadiusBottomStart="80dp"
                app:boxCornerRadiusTopEnd="80dp"
                app:boxCornerRadiusTopStart="80dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="5"

                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/inst_comm_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/pb_inst_settings"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="335dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructor_commission_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/instructor_revenue_percentage"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_number"
                app:boxCornerRadiusBottomEnd="80dp"
                app:boxCornerRadiusBottomStart="80dp"
                app:boxCornerRadiusTopEnd="80dp"
                app:boxCornerRadiusTopStart="80dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/revenue_percentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="5"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/admin_revenue_percentage"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_number"
                app:boxCornerRadiusBottomEnd="80dp"
                app:boxCornerRadiusBottomStart="80dp"
                app:boxCornerRadiusTopEnd="80dp"
                app:boxCornerRadiusTopStart="80dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/admin_percentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="5" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>