<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_dialog"
    tools:context=".dialogs.ResetDialog">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/title"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        android:text="@string/password_detail"
        android:textColor="#000"
        android:textSize="14sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        app:boxCornerRadiusTopStart="80dp"
        app:boxCornerRadiusBottomStart="80dp"
        app:boxCornerRadiusTopEnd="80dp"
        app:boxCornerRadiusBottomEnd="80dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/colorAccent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/description"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        app:boxCornerRadiusTopStart="80dp"
        app:boxCornerRadiusBottomStart="80dp"
        app:boxCornerRadiusTopEnd="80dp"
        app:boxCornerRadiusBottomEnd="80dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/new_password"
        app:boxStrokeColor="@color/colorAccent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/confirm_password"
        android:id="@+id/errorMessage"
        android:textColor="@color/colorRed"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="@id/confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>